sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: '(' expected but identifier found.
  for i(0<-l-2) {
      ^AlgBubbleSort1:8: error: illegal start of simple expression
} 
^